--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@ Thursday, 21st of September, 2017
 
 <section>
 <h2>Purpose and goals</h2>
+<p>Excellence wants to break through from being a local band to a world-famous band. The problem the website is attempting to solve is increasing the band's publicity by spreading information about the band.
+</p>
 <p>The purpose of the website is to make people excited about the band “Excellence” and so they will buy tickets for their concerts. Thus, one of our goals is to inform the visitors on our website about “Excellence” and make visitors interested. We will do this with pages about the band and their music. We will also add some video clips from concerts so people can get the impression that Excellence are cool, and would like to go to the concerts themselves. We will also make a page with tour dates to make it easy for the visitors to plan for when they will attend their next concert. Maybe one time we will make it possible to buy concert tickets at our website.</p>
 <p>Another goal to fulfill the purpose is to make people interact with the band through the website and give them answers to their questions. We will do this through the pages for FAQ and Guestbook, and also by giving them contact information. The goal is that the website should be interesting and useful for people either familiar or unfamiliar with the band. The site should give the visitor a good image of the band by just viewing the front page.</p>
 </section>
