--- a/index.html
+++ b/index.html
@@ -28,11 +28,17 @@ Thursday, 21st of September, 2017
 
 <section>
 <h2>Purpose and goals</h2>
-<p>Excellence wants to break through from being a local band to a world-famous band. The problem the website is attempting to solve is increasing the band's publicity by spreading information about the band.
-</p>
-<p>The purpose of the website is to make people excited about the band “Excellence” and so they will buy tickets for their concerts. Thus, one of our goals is to inform the visitors on our website about “Excellence” and make visitors interested. We will do this with pages about the band and their music. We will also add some video clips from concerts so people can get the impression that Excellence are cool, and would like to go to the concerts themselves. We will also make a page with tour dates to make it easy for the visitors to plan for when they will attend their next concert. Maybe one time we will make it possible to buy concert tickets at our website.</p>
-<p>Another goal to fulfill the purpose is to make people interact with the band through the website and give them answers to their questions. We will do this through the pages for FAQ and Guestbook, and also by giving them contact information. The goal is that the website should be interesting and useful for people either familiar or unfamiliar with the band. The site should give the visitor a good image of the band by just viewing the front page.</p>
-</section>
+<p>Excellence wants to break through from being a local band to a world-famous band. The problem the website is attempting to solve is increasing the band's publicity by spreading information about the band.</p>
+
+<p>The main purpose of the website is to inform people about the band “Excellence”, and make visitors interested and hyped. The website should be interesting and useful for people either familiar or unfamiliar with the band. It should give the visitor a good image of the band by just viewing the front page. In addition one purpose is to sell more concert tickets. To fulfill these purposes the site will contain pages about the band and their music. We will also add some video clips from concerts so people can get the impression that Excellence are cool, and would like to go to the concerts themselves. We will also make a page with tour dates to make it easy for the visitors to plan for when they will attend their next concert. Maybe one time we will make it possible to buy concert tickets at our website. </p>
+
+<p>To fulfill the purpose of the site we have made some concrete goals: 
+<ul>
+<li>Excellence facebook page should have 20 000 likes by the end of 2018.</li>
+<li>Increase the sales of concerts tickets by 20% from 2017 to 2018.</li>
+<li>Attain 500 subscribers on Youtube by the end of 2018.</li>
+<li>To have at least two international concerts booked by the end of 2018.</li>
+</ul></p>
 
 <section>
 <h2>Audience</h2>
