--- a/index.html
+++ b/index.html
@@ -32,13 +32,15 @@ Thursday, 21st of September, 2017
 
 <p>The main purpose of the website is to inform people about the band “Excellence”, and make visitors interested and hyped. The website should be interesting and useful for people either familiar or unfamiliar with the band. It should give the visitor a good image of the band by just viewing the front page. In addition one purpose is to sell more concert tickets. To fulfill these purposes the site will contain pages about the band and their music. We will also add some video clips from concerts so people can get the impression that Excellence are cool, and would like to go to the concerts themselves. We will also make a page with tour dates to make it easy for the visitors to plan for when they will attend their next concert. Maybe one time we will make it possible to buy concert tickets at our website. </p>
 
-<p>To fulfill the purpose of the site we have made some concrete goals: 
+<p>To fulfill the purpose of the site we have made some concrete goals: </p>
 <ul>
-<li>Excellence facebook page should have 20 000 likes by the end of 2018.</li>
-<li>Increase the sales of concerts tickets by 20% from 2017 to 2018.</li>
-<li>Attain 500 subscribers on Youtube by the end of 2018.</li>
-<li>To have at least two international concerts booked by the end of 2018.</li>
-</ul></p>
+  <li><p>Excellence facebook page should have 20 000 likes by the end of 2018.</p></li>
+  <li><p>Increase the sales of concerts tickets by 20% from 2017 to 2018.</p></li>
+  <li><p>Attain 500 subscribers on Youtube by the end of 2018.</p></li>
+  <li><p>To have at least two international concerts booked by the end of 2018.</p></li>
+</ul>
+
+</section>
 
 <section>
 <h2>Audience</h2>
@@ -73,7 +75,8 @@ Thursday, 21st of September, 2017
   </p>
   <h3>FAQ</h3>
   <p>The FAQ page will help the user by answering frequently answered questions and linking to other sub pages. Consequently reducing the amount of users sending emails asking questions, and help them to navigate the site. This page might also answer some funny question as well.
-  </p></section>
+  </p>
+</section>
 
 <section>
 <h2>Specific requirements</h2>
@@ -83,7 +86,7 @@ Thursday, 21st of September, 2017
   <li><p>The page website should have a dark, clean and modern look, at last not white or very bright. Images from a concert are often dark and the images will look worse if the background colour of the pages are bright compared to them. The colour will also help appeal to the fans, as they consist of young adults.</p></li>
 <li><p>The picture page should contain at least 5-10 pictures and the front page should have a photo of the band/group.
 </p></li></ul>
-</section> 
+</section>
 
 <section>
 <h2>Technical difficulties</h2>
