Add Content section

--- a/design.html
+++ b/design.html
@@ -20,21 +20,21 @@
 
 <main>
   <section>
-    <h2>Administrative Details</h2>
+    <h2>1. Administrative Details</h2>
     <p>
       The name of your client, and his or her position in the organization.
     </p>
   </section>
 
   <section>
-    <h2>Purpose, goals, and audience</h2>
+    <h2>2. Purpose, goals, and audience</h2>
     <p>
       A summary paragraph to remind the reader about the
       purpose, goals, and audience of your website. Make it brief and succinct.    </p>
   </section>
 
   <section>
-    <h2>Navigation Structure</h2>
+    <h2>3. Navigation Structure</h2>
     <p>
       A brief discussion about the site's navigation structure using the
       terminology learned in class and the notes on slides “HTML Cont.” in Storyboard and
@@ -46,7 +46,7 @@
   </section>
 
   <section>
-    <h2>Page Layout and Appearance</h2>
+    <h2>4. Page Layout and Appearance</h2>
     <p>
       A description of design decisions that are universal to your
       site. You should specify in writing the fonts (types and sizes), the color scheme (for text,
@@ -60,30 +60,124 @@
   </section>
 
   <section>
-    <h2>Content</h2>
-    <p>
-      This is the longest section of your document. For every page, you will need to give
-      a text description of the content of the page as well as an image of the mockup of the page.
-      The text describes what goal(s) this page fulfills, and how design decisions specific to it
-      contribute into fulfilling such goals. The reason why you should describe the content is that
-      you might not have yet received the actual content from the client and in your mockup of the
-      page you will be using fake text, fake images, etc. While the content can be fake, you should
-      try to use meaningful headings and captions to convey its meaning. Finally, you should
-      describe the design decisions that are unique for this particular page (if any). Here is an
-      example:
-    </p>
-    <p>
-      <i>Images of e-board members are stored as thumbnails to reduce the loading time of the page.
-      They appear in a grid format on the left side of the page. Each thumbnail is of size 150x150.
-      When clicked, they will open as larger images (320x480) on the right side of the page,
-      surrounded by text describing the member's duties and reasons for joining the org. The chosen
-      thumbnail will have a surrounding border in gray color, to provide visual feedback to the user
-        for the selected content.</i>
-    </p>
+    <h2>5. Content</h2>
+
+    <section>
+      <h3>5.1 Home</h3>
+      <figure>
+        <img src="mockups/Frontpage%20with%20clear%20navbar%20-%20Mockup.jpg" alt="Mockup design of the Home page.">
+        <figcaption>Figure 5.1: Mockup of the Home page.</figcaption>
+      </figure>
+      <p>
+
+      </p>
+    </section>
+
+    <section>
+      <h3>5.2 About Excellence</h3>
+      <figure>
+        <img src="mockups/About%20Excellence%20-%20Mockup.jpg" alt="Mockup design of the About Excellence page.">
+        <figcaption>Figure 5.2: Mockup of the About Excellence page.</figcaption>
+      </figure>
+      <p>
+
+      </p>
+    </section>
+
+    <section>
+      <h3>5.3 FAQ</h3>
+      <figure>
+        <img src="mockups/FAQ%20-%20Mockup.jpg" alt="Mockup design of the FAQ page.">
+        <figcaption>Figure 5.3: Mockup of the FAQ page.</figcaption>
+      </figure>
+      <p>
+
+      </p>
+    </section>
+
+    <section>
+      <h3>5.4 Discography</h3>
+      <figure>
+        <img src="mockups/Discography%20-%20Mockup.jpg" alt="Mockup design of the Discography page.">
+        <figcaption>Figure 5.4: Mockup of the Discography page.</figcaption>
+      </figure>
+      <p>
+
+      </p>
+    </section>
+
+    <section>
+      <h3>5.5 Tour Dates</h3>
+      <figure>
+        <img src="mockups/Tour%20Dates%20-%20Mockup.jpg" alt="Mockup design of the Tour Dates page.">
+        <figcaption>Figure 5.5: Mockup of the Tour Dates page.</figcaption>
+      </figure>
+      <p>
+
+      </p>
+    </section>
+
+    <section>
+      <h3>5.6 Pictures</h3>
+      <figure>
+        <img src="mockups/Pictures%20-%20Mockup.jpg" alt="Mockup design of the Pictures page.">
+        <figcaption>Figure 5.6: Mockup of the Pictures page.</figcaption>
+      </figure>
+
+      <p>
+        The pictures page contains pictures related to the band, such as pictures of their studio, their concerts, band practices and behind the scenes. It is a simple page with the title “Pictures”, and pictures stacked underneath each other separated by a short text telling the context of the picture and when the picture was taken. Every picture has the same aspect ratio of 16:9, with a max width of 640px and max height of 400px, which means that the pictures will be uploaded as 640px and 400px to reduce loading time, and adjusted according to the specific screen of the user. The pictures will have a small drop shadow.
+      </p>
+      <p>
+        This page contributes to fulfill the purpose of making visitors interested in the band, and become more familiar and feel closer. If visitors feel a bond with the band, that will possibly make them more interested in Excellences activities and would want to support them or see them live, hence buying tickets for shows.  Also, if the visitors see interesting content, they would be more likely to want to follow them on social media to keep updated.
+      </p>
+      <p>
+        On this page we decided to drop the picture header that is common for the other subpages due to that this is a page specific for pictures. It was deemed that there is no need for it as other pictures populate the page to make it interesting.
+      </p>
+    </section>
+
+    <section>
+      <h3>5.7 Video</h3>
+      <figure>
+        <img src="mockups/Video%20-%20Mockup.jpg" alt="Mockup design of the Video page.">
+        <figcaption>Figure 5.7: Mockup of the Video page.</figcaption>
+      </figure>
+      <p>
+
+      </p>
+    </section>
+
+    <section>
+      <h3>5.8 Contact Us</h3>
+      <figure>
+        <img src="mockups/Contact%20us%20-%20Mockup.jpg"
+             alt="Mockup design of Contact Us page.">
+        <figcaption>Figure 5.8: Mockup of the Contact Us page.</figcaption>
+      </figure>
+      <p>
+        The contact page contains the contact info of the band, including their e-mail and social media links as well as information about where the band is based and what they are available for. This page will make the band easily available for venues and sponsors that could be interested in knowing more and possibly booking the band, or would want to make a sponsor deal. This is also a page which lets fans and other visitors know where they can find out more about Excellence.
+      </p>
+      <p>
+        This page features the same design as the other subpages, with a picture header above the title, and the style of the text and colors matching the rest of the site. Beneath the title ‘Contact Us’ there is the e-mail address, then other info, and finally an encouragement to visit Excellence social media sites along with two buttons linking to their Facebook page and YouTube channels. The social media buttons are of size 70x70px.
+      </p>
+      <p>
+        The Contact Us page contributes to making the band more international by allowing venues from all over the world to contact the band, and also advertises their social media channels to contribute to the like and subscribers goal.
+      </p>
+    </section>
+
+    <section>
+      <h3>5.9 Guestbook</h3>
+      <figure>
+        <img src="mockups/Guestbook%20-%20Mockup.jpg" alt="Mockup design of the Guestbook page.">
+        <figcaption>Figure 5.9: Mockup of the Guestbook page.</figcaption>
+      </figure>
+      <p>
+
+      </p>
+    </section>
   </section>
 
   <section>
-    <h2>Minimum Requirements:</h2>
+    <h2>6. Minimum Requirements:</h2>
     <p>
       The website must include four distinct JavaScript applications (for
       example, rollovers effects on images or menus, user-defined functions, form validation,
@@ -98,7 +192,7 @@
   </section>
 
   <section>
-    <h2>Plan</h2>
+    <h2>7. Plan</h2>
     <p>
       Provide a clear, specific description of your plan for building the site. Outline the tasks
       to be accomplished, the deadlines for those tasks, and who is responsible for them. Include a
