- Add looong table

--- a/design.html
+++ b/design.html
@@ -209,7 +209,213 @@
       list of files and folders, which will help each partner link to files her partner has built. Include a
       complete list of everything you need to get from your client (text, pictures, sound, etc.) and
       when you expect to get them. To the greatest extent you can, try to have all of these things by
-      the time your design is done, so that nothing will delay your coding.    </p>
+      the time your design is done, so that nothing will delay your coding.
+    </p>
+    <table>
+   <tr>
+      <th>Directories/filenames</th>
+      <th></th>
+      <th>Deadline</th>
+      <th>Assigned person</th>
+      <th>Description</th>
+   </tr>
+   <tr>
+      <td>/</td>
+      <td></td>
+      <td>9.11.17</td>
+      <td></td>
+      <td></td>
+   </tr>
+   <tr>
+      <td>index.html</td>
+      <td></td>
+      <td>7.11.17</td>
+      <td></td>
+      <td>Contains navigation bar, background, content container and footer</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>Kristoffer, Sigrid</td>
+      <td>Navigation bar. Kristoffer has main responsibility.</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>Håvard</td>
+      <td>Content</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>Caroline</td>
+      <td>Footer</td>
+   </tr>
+   <tr>
+      <td>articles/</td>
+      <td></td>
+      <td>17.10.17</td>
+      <td></td>
+      <td>Will contain the pages that may be navigated to</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td>home.html</td>
+      <td></td>
+      <td>Sigrid</td>
+      <td>Home page with big image and text</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td>about.html</td>
+      <td></td>
+      <td>Håvard</td>
+      <td>About Excellence page</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td>faq.html</td>
+      <td></td>
+      <td>Kristoffer</td>
+      <td>FAQ page</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td>discography.html</td>
+      <td></td>
+      <td>Sigrid</td>
+      <td>Discography page</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td>tourdates.html</td>
+      <td></td>
+      <td>Sigrid</td>
+      <td>Page with tour dates </td>
+   </tr>
+   <tr>
+      <td></td>
+      <td>pictures.html</td>
+      <td></td>
+      <td>Caroline</td>
+      <td>Pictures page</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td>video.html</td>
+      <td></td>
+      <td>Kristoffer</td>
+      <td>Videos page</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td>contactus.html</td>
+      <td></td>
+      <td>Caroline</td>
+      <td>Contact Us page</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td>guestbook.html</td>
+      <td></td>
+      <td>Håvard</td>
+      <td>Guestbook page</td>
+   </tr>
+   <tr>
+      <td>style.css</td>
+      <td></td>
+      <td>7.11.17</td>
+      <td>All</td>
+      <td>Stylesheet</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td></td>
+      <td>10.10.17</td>
+      <td></td>
+      <td>General styling of fonts</td>
+   </tr>
+   <tr>
+      <td>images/</td>
+      <td></td>
+      <td>10.10.17</td>
+      <td>Caroline</td>
+      <td>Categorizes images</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td>albumart/</td>
+      <td></td>
+      <td></td>
+      <td>Will contain images for "Discography"</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td>members/</td>
+      <td></td>
+      <td></td>
+      <td>Will contain images for "About Excellence"</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td>pictures/</td>
+      <td></td>
+      <td></td>
+      <td>Will contain images for "Pictures"</td>
+   </tr>
+   <tr>
+      <td>videos/</td>
+      <td></td>
+      <td>10.10.17</td>
+      <td>Kristoffer</td>
+      <td>Will contain videos for "Video"</td>
+   </tr>
+   <tr>
+      <td>js/</td>
+      <td></td>
+      <td>30.10.17</td>
+      <td></td>
+      <td>Will contain all JavaScript files</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td>guestbook.js</td>
+      <td></td>
+      <td>Håvard</td>
+      <td>Unknown complexity</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td>splash_image.js</td>
+      <td></td>
+      <td>Caroline</td>
+      <td>Easy</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td>document_loader.js</td>
+      <td>17.10.17</td>
+      <td>Håvard</td>
+      <td>Issues XMLHttpRequests (works on NTNU servers)</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td>discography.js</td>
+      <td></td>
+      <td>Sigrid</td>
+      <td>Generate HTML element, put on styles.</td>
+   </tr>
+   <tr>
+      <td></td>
+      <td>dropdown.js</td>
+      <td></td>
+      <td>Kristoffer</td>
+      <td>Medium</td>
+   </tr>
+</table>
   </section>
 
 </main>
