--- a/design.html
+++ b/design.html
@@ -74,7 +74,10 @@
         <figcaption>Figure 5.1: Mockup of the Home page.</figcaption>
       </figure>
       <p>
-
+        The home page will feature a full-width background image from a concert, and also display the logo of Excellence in the center of said image, such that visitors will have a clear understanding of what webpage they are visiting. By displaying a large, aesthetically pleasing background image the page will attract the user's attention.
+      </p>
+      <p>
+        Because this is what most users will see when they open the website, it is important that it has a simple layout, and does not overwhelm the visitor with information. By not providing all the information at once, the visitor becomes curious to find out more about the band, and will start exploring the rest of the website. At this point, easy navigation becomes very important.
       </p>
     </section>
 
@@ -85,7 +88,10 @@
         <figcaption>Figure 5.2: Mockup of the About Excellence page.</figcaption>
       </figure>
       <p>
-
+        The About Excellence page contains a description of the band and the members. It has a header that says “About Excellence”, and after that a paragraph with some history and facts about the band. Both placed to the left with a margin on both sides. Next there will be a smaller header with the title “Members”. The members of the group will be displayed with a picture and a little text giving information about each of them at the right side of the picture. The picture will therefore be placed to the left of the site, and the pictures are of size 180x180px.
+      </p>
+      <p>
+        The page will play a big role to achieve the goal to inform people about the band “Excellence”. For someone that may be interested in the band and seeks information this page will therefore be very important. It will probably be one of the first sites the visitor will check out if they don’t know anything about Excellence previously.
       </p>
     </section>
 
@@ -107,7 +113,10 @@
         <figcaption>Figure 5.4: Mockup of the Discography page.</figcaption>
       </figure>
       <p>
-
+        The page consists of a vertical listing of each album in chronological order. The album art is anchored on the left side of the page, while a list of the songs on the album can be found beside it. Situated above the album art is the title of the album as well as the year of release.
+      </p>
+      <p>
+        This page will serve as a way for new visitors to discover previous work by the band and also as a reference to other visitors. Laying out the album information will make the website an attractive resource for information on the band.
       </p>
     </section>
 
@@ -118,7 +127,10 @@
         <figcaption>Figure 5.5: Mockup of the Tour Dates page.</figcaption>
       </figure>
       <p>
-
+        The concert page will display the upcoming tours and highlight the next tour.This page have the same design as the other subpages, with a picture header above the title, and the style of the text and colours matching the rest of the site. Below the title ‘Tour Dates’, there is a subtitle ‘Next concert:’, followed by the date and location of the next tour. Beneath this subtitle, there will be a new subtitle ‘Autumn Tour 2017’, followed by  a list containing the dates and locations of the upcoming tours, with the title ‘Concerts’.
+      </p>
+      <p>
+        One of the bands main goals is to sell more concerts tickets, specifically an increase in ticket sales by 20 % and have at least two international tours booked by the end of 2018. This page is going to give information about when and where the upcoming tours will be. This is achieved by creating a list containing all the upcoming tour dates and their locations. This makes it easy for the user to find the information they want. The next concert is written again outside the list, below the header. This will make it easy to see the next tour, and people will get this information without needing to read a list. This might also create a little hype for the next concert.
       </p>
     </section>
 
@@ -149,6 +161,12 @@
       <p>
         The video page contains videos related to the band, such as video from their concerts, practices and behind the scenes.
       </p>
+      <p>
+        This page have the same design as the other subpages, with a picture header above the title, and the style of the text and colours matching the rest of the site. Below the title ‘Video’ there are video players beneath each other, which are imported from Excellence YouTube. They are centered at the middle of the page. Below each player is a description of where and when the video was recorded. Each video player has the same aspect ratio of 16:9, with a max width of 640px and max height of 360px. The video players will have a small drop down shadow.
+      </p>
+      <p>
+        One of the band's goals is to inform the visitors about Excellence and give them  an impression of who they are and how they sound like. Another goal is to get 500 subscribers on YouTube and increase the ticket sales by 20%. This page will help the user get the feeling of Excellence, who they are, how they sound like, and such. This will help the user to bond with the band and hopefully want to check out more of their music and videos on YouTube, and perhaps even subscribe. And if the user likes the music, they might also want to come to one of their concerts.
+      </p>
     </section>
 
     <section>
@@ -176,7 +194,10 @@
         <figcaption>Figure 5.9: Mockup of the Guestbook page.</figcaption>
       </figure>
       <p>
-
+        On the top of the page there will be two text fields: one for a visitor's name and another field for the visitor's message to the band. Below this section there will be a list of previously submitted messages. By placing the submission form at the top, it makes it easier for the user to understand that they, too, may submit their own message.
+      </p>
+      <p>
+        This page allows the visitor to feel as if they are seen by the band, as well as the ability to discover other people who also enjoy the band. While it is not meant as a forum, it may allow the visitors to have a more interactive experience with others and possibly the band.
       </p>
     </section>
   </section>
