--- a/design.html
+++ b/design.html
@@ -55,7 +55,99 @@
   <section>
     <h2>4. Page Layout and Appearance</h2>
     <p>
-      [Insert here]
+      <table>
+   <tr>
+      <th>Where</th>
+      <th>What</th>
+      <th>Font</th>
+      <th>Size (px)</th>
+      <th>Color (#)</th>
+   </tr>
+   <tr>
+      <td>Navbar</td>
+      <td>Logo<br> Menu</td>
+      <td>Ubuntu Bold<br> Open Sans Semibold</td>
+      <td>60<br> 36</td>
+      <td>cbcbcb<br> FFFFFF</td>
+   </tr>
+   <tr>
+      <td>Footer</td>
+      <td>Logo<br> Category header<br> Sitemap links</td>
+      <td>Ubuntu Bold<br> Open Sans Bold<br> Open Sans Semibold</td>
+      <td>100<br> 24<br> 21</td>
+      <td>cbcbcb<br> FFFFFF<br> FFFFFF</td>
+   </tr>
+   <tr>
+      <td>Universal</td>
+      <td>Title<br> Body text</td>
+      <td>Open Sans Bold<br> Open Sans Light</td>
+      <td>72<br> 28</td>
+      <td>8d3c58<br> FFFFFF</td>
+   </tr>
+   <tr>
+      <td>Front page</td>
+      <td>Bulletin text<br> Smaller text</td>
+      <td>Ubuntu Bold<br> Ubuntu Bold</td>
+      <td>160<br> 36</td>
+      <td>FFFFFF<br> FFFFFF</td>
+   </tr>
+   <tr>
+      <td>About Excellence</td>
+      <td>Subheader: Members<br> Names</td>
+      <td>Open Sans Bold<br> Open Sans Bold</td>
+      <td>36<br> 27</td>
+      <td>eff4b6<br> eff4b6</td>
+   </tr>
+   <tr>
+      <td>FAQ</td>
+      <td>Questions</td>
+      <td>Open Sans Bold</td>
+      <td>30</td>
+      <td>eff4b6</td>
+   </tr>
+   <tr>
+      <td>Discography</td>
+      <td>Subheader: Album title<br> Album content</td>
+      <td>Open Sans Bold<br> Open Sans Semibold</td>
+      <td>36<br> 30</td>
+      <td>eff4b6<br> FFFFFF</td>
+   </tr>
+   <tr>
+      <td>Pictures</td>
+      <td>Caption</td>
+      <td>Open Sans Semibold</td>
+      <td>30</td>
+      <td>dcdcdc</td>
+   </tr>
+   <tr>
+      <td>Video</td>
+      <td>Caption</td>
+      <td>Open Sans Semibold</td>
+      <td>30</td>
+      <td>dcdcdc</td>
+   </tr>
+   <tr>
+      <td>Tour Dates</td>
+      <td>Next concert<br> Tour name<br> Concerts<br> Date/Location</td>
+      <td>Open Sans Bold<br> Open Sans Bold<br> Open Sans Bold<br> Open Sans Bold</td>
+      <td>35<br> 40<br> 36<br> 30</td>
+      <td>eff4b6<br> 8d3c58<br> eff4b6<br> dcdcdc</td>
+   </tr>
+   <tr>
+      <td>Contact Us</td>
+      <td>E-mail, Social media<br> Gmail-address</td>
+      <td>Open Sans Bold<br> Open Sans Bold</td>
+      <td>30<br> 30</td>
+      <td>eff4b6<br> FFFFFF</td>
+   </tr>
+   <tr>
+      <td>Guestbook</td>
+      <td>Name, Message<br> Submit<br> Subheader: What oth..<br> Name of reviewer</td>
+      <td>Open Sans Bold<br> Open Sans Bold<br> Open Sans Bold<br> Open Sans Bold</td>
+      <td>27<br> 30<br> 36<br> 27</td>
+      <td>eff4b6<br> 8d3c58<br> eff4b6<br> eff4b6</td>
+   </tr>
+</table>
     </p>
     <h3>Modularity</h3>
     <p>
