--- a/design.html
+++ b/design.html
@@ -54,6 +54,11 @@
 
   <section>
     <h2>4. Page Layout and Appearance</h2>
+    <figure>
+      <img src="mockups/Universal%20Site%20-%20Mockup.jpg" alt="Image of a sitemap of the website">
+      <figcaption>Figure 3.1: Sitemap of our website</figcaption>
+    </figure>
+
     <p>
       <table>
    <tr>
@@ -148,7 +153,6 @@
       <td>eff4b6<br> 8d3c58<br> eff4b6<br> eff4b6</td>
    </tr>
 </table>
-    </p>
     <h3>Modularity</h3>
     <p>
       In order to facilitate a universal design across the entire website, a standard structure is imposed on the articles. The content section of the page is a replaceable component which will be swapped out upon navigation. It is defined as a column with margins on the left and right side. This allows all the pages to use the same background, navigation bar and footer. The home page is an exception to this rule, which does not follow the form of a column with margins.
@@ -316,14 +320,7 @@
 
   <section>
     <h2>7. Plan</h2>
-    <p>
-      Provide a clear, specific description of your plan for building the site. Outline the tasks
-      to be accomplished, the deadlines for those tasks, and who is responsible for them. Include a
-      list of files and folders, which will help each partner link to files her partner has built. Include a
-      complete list of everything you need to get from your client (text, pictures, sound, etc.) and
-      when you expect to get them. To the greatest extent you can, try to have all of these things by
-      the time your design is done, so that nothing will delay your coding.
-    </p>
+
     <table>
    <tr>
       <th>Directories/filenames</th>
@@ -498,14 +495,14 @@
       <td>guestbook.js</td>
       <td></td>
       <td>Håvard</td>
-      <td>Unknown complexity</td>
+      <td>Functionality for guestbook.</td>
    </tr>
    <tr>
       <td></td>
       <td>splash_image.js</td>
       <td></td>
       <td>Caroline</td>
-      <td>Easy</td>
+      <td>Transition effect on front-page image.</td>
    </tr>
    <tr>
       <td></td>
@@ -519,14 +516,14 @@
       <td>discography.js</td>
       <td></td>
       <td>Sigrid</td>
-      <td>Generate HTML element, put on styles.</td>
+      <td>Generate HTML element for album and put styles on it.</td>
    </tr>
    <tr>
       <td></td>
       <td>dropdown.js</td>
       <td></td>
       <td>Kristoffer</td>
-      <td>Medium</td>
+      <td>Functionality for dropdown in navbar</td>
    </tr>
 </table>
   </section>
