Edit Administrative Details text.

--- a/design.html
+++ b/design.html
@@ -22,7 +22,8 @@
   <section>
     <h2>1. Administrative Details</h2>
     <p>
-      We have an imaginary client which are the band Excellence.    </p>
+    Our client is the imaginary band Excellence.
+    </p>
   </section>
 
   <section>
